@@ -5,8 +5,12 @@ import com.faforever.api.data.domain.Achievement;
 import com.faforever.api.data.domain.Avatar;
 import com.faforever.api.data.domain.AvatarAssignment;
 import com.faforever.api.data.domain.Clan;
+import com.faforever.api.data.domain.CoopResult;
 import com.faforever.api.data.domain.Event;
 import com.faforever.api.data.domain.FeaturedMod;
+import com.faforever.api.data.domain.Game;
+import com.faforever.api.data.domain.Leaderboard;
+import com.faforever.api.data.domain.LeaderboardRating;
 import com.faforever.api.data.domain.Map;
 import com.faforever.api.data.domain.MapStatistics;
 import com.faforever.api.data.domain.MapVersion;
@@ -27,12 +31,10 @@ import org.springframework.web.servlet.HandlerMapping;
 import javax.servlet.http.HttpServletRequest;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import static com.faforever.api.challonge.ChallongeController.CHALLONGE_READ_CACHE_NAME;
 import static com.faforever.api.featuredmods.FeaturedModService.FEATURED_MOD_FILES_CACHE_NAME;
-import static com.faforever.api.leaderboard.LeaderboardService.LEADERBOARD_GLOBAL_CACHE_NAME;
-import static com.faforever.api.leaderboard.LeaderboardService.LEADERBOARD_RANKED_1V1_CACHE_NAME;
 import static com.faforever.api.security.OAuthClientDetailsService.CLIENTS_CACHE_NAME;
 import static com.github.benmanes.caffeine.cache.Caffeine.newBuilder;
 import static java.util.concurrent.TimeUnit.MINUTES;
@@ -53,8 +55,10 @@ public class CacheConfig {
       new CaffeineCache(AvatarAssignment.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
       new CaffeineCache(Achievement.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
       new CaffeineCache(Clan.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
+      new CaffeineCache(CoopResult.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
       new CaffeineCache(Event.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
       new CaffeineCache(FeaturedMod.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
+      new CaffeineCache(Game.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
       new CaffeineCache(Map.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
       new CaffeineCache(MapVersion.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
       new CaffeineCache(MapStatistics.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
@@ -62,10 +66,10 @@ public class CacheConfig {
       new CaffeineCache(ModVersion.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
       // Other caches
       new CaffeineCache(CHALLONGE_READ_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(LEADERBOARD_RANKED_1V1_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(LEADERBOARD_GLOBAL_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
       new CaffeineCache(FEATURED_MOD_FILES_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(CLIENTS_CACHE_NAME, newBuilder().expireAfterWrite(5, SECONDS).build())
+      new CaffeineCache(CLIENTS_CACHE_NAME, newBuilder().expireAfterWrite(5, SECONDS).build()),
+      new CaffeineCache(Leaderboard.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
+      new CaffeineCache(LeaderboardRating.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build())
     ));
     return cacheManager;
   }
@@ -82,10 +86,10 @@ public class CacheConfig {
         String entity = getEntity((HttpServletRequest) context.getArgs()[1]);
 
         if (!cacheManager.getCacheNames().contains(entity)) {
-          return Collections.singletonList(ElideConfig.DEFAULT_CACHE_NAME);
+          return List.of(ElideConfig.DEFAULT_CACHE_NAME);
         }
 
-        return Collections.singletonList(entity);
+        return List.of(entity);
       }
     };
   }
