@@ -16,8 +16,7 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
-import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 
@@ -40,12 +39,12 @@ public class GitHubDeploymentService {
   void createDeploymentIfEligible(Push push) {
     String ref = push.getRef();
     Optional<FeaturedMod> optional = featuredModService.findByGitUrlAndGitBranch(
-      push.getRepository().gitHttpTransportUrl(),
+      push.getRepository().getHttpTransportUrl(),
       push.getRef().replace("refs/heads/", "")
     );
 
-    if (!optional.isPresent()) {
-      log.warn("No configuration present for repository '{}' and ref '{}'", push.getRepository().gitHttpTransportUrl(), push.getRef());
+    if (optional.isEmpty()) {
+      log.warn("No configuration present for repository '{}' and ref '{}'", push.getRepository().getHttpTransportUrl(), push.getRef());
       return;
     }
 
@@ -53,7 +52,7 @@ public class GitHubDeploymentService {
       .autoMerge(false)
       .environment(fafApiProperties.getGitHub().getDeploymentEnvironment())
       .payload(optional.get().getTechnicalName())
-      .requiredContexts(Collections.emptyList())
+      .requiredContexts(List.of())
       .create();
 
     log.info("Created deployment: {}", ghDeployment);
@@ -73,7 +72,7 @@ public class GitHubDeploymentService {
     }
 
     GHRepository repository = deployment.getRepository();
-    int deploymentId = ghDeployment.getId();
+    long deploymentId = ghDeployment.getId();
 
     try {
       performDeployment(ghDeployment, repository, deploymentId);
@@ -83,7 +82,7 @@ public class GitHubDeploymentService {
     }
   }
 
-  private void performDeployment(GHDeployment ghDeployment, GHRepository repository, int deploymentId) throws IOException {
+  private void performDeployment(GHDeployment ghDeployment, GHRepository repository, long deploymentId) {
     String modName = ghDeployment.getPayload();
     FeaturedMod featuredMod = featuredModService.findModByTechnicalName(modName)
       .orElseThrow(() -> new IllegalArgumentException("No such mod: " + modName));
@@ -97,9 +96,10 @@ public class GitHubDeploymentService {
   }
 
   @SneakyThrows
-  private void updateDeploymentStatus(int deploymentId, GHRepository repository, GHDeploymentState state, String description) {
+  private void updateDeploymentStatus(long deploymentId, GHRepository repository, GHDeploymentState state, String description) {
     log.debug("Updating deployment status to '{}' with description: {}", state, description);
-    repository.createDeployStatus(deploymentId, state)
+    repository.getDeployment(deploymentId)
+      .createStatus(state)
       .description(description)
       .create();
   }
